<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/proband_code_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quest"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proband_code"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="2"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:maxLength="1"
                android:id="@+id/pc_1"/>

        <requestFocus />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPersonName"
                android:ems="2"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:maxLength="1"
                android:id="@+id/pc_2"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPersonName"
                android:ems="2"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:maxLength="1"
                android:id="@+id/pc_3"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPersonName"
                android:ems="2"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:maxLength="1"
                android:id="@+id/pc_4"/>

        <EditText
                android:id="@+id/pc_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="2"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:maxLength="1"
                android:inputType="textPersonName" >

        </EditText>

    </LinearLayout>

    <Button
            android:id="@+id/button_proband_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="button_proband_ok"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
